# homeforge-chronicle

./: .gitignore  CHRONICLE_MCP_README.md  CLAUDE.md  Cargo.toml  HOMEFORGE.md  README.md  SPEC.md  canister_ids.json  chronicle.toml  chronicle.toml.example  dfx.json  memory-bridge.sh  package-lock.json  package.json  test_mind.sh
scripts/: bridge_polygon_to_base.js  create_polygon_wallet.js  derive_evm_address.js  polymarket_trade.js
src/: capsule.rs  cli.rs  cognitive.rs  compilation.rs  config.rs  db.rs  deploy.rs  embedding.rs  extraction.rs  icp.rs  ingest.rs  lib.rs  llm.rs  metabolism.rs  parser.rs  site.rs  watch.rs
src/canister/: Cargo.toml  chronicle_backend.did
src/canister/src/: lib.rs
templates/: about.html  base.html  index.html  input.html  outbox.html  predictions.html  style.css  thoughts.html  thread.html  threads_index.html  wallet.html
tests/: integration_test.rs
