[package]
name = "homeforge-chronicle"
version = "0.1.0"
edition = "2021"
authors = ["Nate"]
description = "Automated life-archive system for Claude conversation exports"

[[bin]]
name = "chronicle"
path = "src/bin/chronicle.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client for LLM API
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
tokio = { version = "1.42", features = ["full"] }

# Templating
askama = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "7.0"
notify-debouncer-mini = "0.4"

# Notifications (optional)
notify-rust = { version = "4.11", optional = true }

[features]
default = []
notifications = ["notify-rust"]

[dev-dependencies]
tempfile = "3.14"
