[workspace]
members = [".", "src/canister"]

[package]
name = "homeforge-chronicle"
version = "0.1.0"
edition = "2021"
authors = ["Nate"]
description = "Automated life-archive system for Claude conversation exports"

[[bin]]
name = "chronicle"
path = "src/bin/chronicle.rs"

[[bin]]
name = "chronicle-mcp"
path = "src/bin/chronicle_mcp.rs"

[[bin]]
name = "chronicle-mind"
path = "src/bin/chronicle_mind.rs"

[[bin]]
name = "chronicle-flare"
path = "src/bin/chronicle_flare.rs"

[[bin]]
name = "chronicle-pulse"
path = "src/bin/chronicle_pulse.rs"

[[bin]]
name = "chronicle-base"
path = "src/bin/chronicle_base.rs"

[[bin]]
name = "chronicle-openchat"
path = "src/bin/chronicle_openchat.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client for LLM API
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
tokio = { version = "1.42", features = ["full"] }

# Web server for dashboard and OpenChat bot
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Native ICP integration
ic-agent = "0.39"
candid = "0.10"
ring = "0.17"

# Templating
askama = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
hex = "0.4"
bs58 = "0.5"
sha2 = "0.10"
sha3 = "0.10"  # keccak256 for EVM address derivation
k256 = { version = "0.13", features = ["ecdsa"] }  # secp256k1 public key decompression
rand = "0.8"  # for wallet key generation

# Flare/EVM integration
alloy = { version = "1.1", features = ["providers", "signers", "contract", "network"] }

# File watching
notify = "7.0"
notify-debouncer-mini = "0.4"

# Notifications (optional)
notify-rust = { version = "4.11", optional = true }

[features]
default = []
notifications = ["notify-rust"]

[dev-dependencies]
tempfile = "3.14"
