[package]
name = "chronicle_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.11"
ic-llm = "1.1"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# XRP wallet with threshold ECDSA
chronicle-xrp = { path = "../../../chronicle-xrp-wallet", features = ["canister"], default-features = false }
hex = "0.4"

[profile.release]
lto = true
opt-level = "z"
